--- a/Frontend/src/components/Order/myOrders.css
+++ b/Frontend/src/components/Order/myOrders.css
@@ -1,80 +1,51 @@
-.myOrdersPage {
-  width: 100vw;
-  max-width: 100%;
-  padding: 0 7vmax;
-  box-sizing: border-box;
-  background-color: rgb(235, 235, 235);
-  position: fixed;
-  top: 0;
-  left: 0;
-  height: 100vh;
-  display: flex;
-  flex-direction: column;
+div.my-orders-container {
+  margin: 10px 30px;
+  padding: 20px;
 }
 
-#myOrdersHeading {
-  text-align: center;
-  font: 400 1.2vmax "Roboto";
-  padding: 0.5vmax;
-  box-sizing: border-box;
-  color: rgb(255, 255, 255);
-  transition: all 0.5s;
-  background-color: rgb(44, 44, 44);
+section.order-card {
+  padding: 20px;
+  cursor: pointer;
 }
 
-.myOrdersTable {
-  background-color: white;
+section.order-card > div {
+  display: grid;
+  grid-template-columns: 150px 1fr 100px 1fr;
 }
 
-.myOrdersTable div {
-  font: 300 1vmax "Roboto";
-  color: rgba(0, 0, 0, 0.678);
-  border: none;
+div.order-product-image > img {
+  object-fit: contain;
+  height: 75px;
+  width: 60px;
 }
 
-.myOrdersTable a {
-  color: rgba(0, 0, 0, 0.527);
-  transition: all 0.5s;
+section.order-card > div > div.price {
+  padding-left: 30px;
 }
 
-.myOrdersTable a:hover {
-  color: tomato;
+div.price > p {
+  font-weight: 600;
+  font-size: 32px;
+  margin: 0px;
 }
 
-.MuiDataGrid-columnHeader {
-  background-color: tomato;
-  padding: 1vmax !important;
+div.price > span:first-of-type {
+  color: #878787;
 }
 
-.MuiDataGrid-columnHeader div {
-  color: rgb(255, 255, 255);
-  font: 500 1.1vmax "Roboto" !important;
+div.price > span:last-of-type {
+  color: green;
+  margin: 0 0 0 10px;
 }
 
-.MuiDataGrid-iconSeparator {
-  display: none !important;
+section.order-card > div > div.highlights li::marker {
+  color: #878787;
 }
 
-@media screen and (max-width: 600px) {
-  .myOrdersPage {
-    padding: 0;
-    height: 93vh;
-  }
+section.order-card > div > div.highlights > div {
+  padding-left: 16px;
+}
 
-  #myOrdersHeading {
-    font: 400 2.2vmax "Roboto";
-    padding: 4vw;
-  }
-
-  .myOrdersTable div {
-    font: 300 4vw "Roboto";
-  }
-
-  .MuiDataGrid-columnHeader {
-    padding: 20px !important;
-  }
-
-  .MuiDataGrid-columnHeader div {
-    font: 500 5vw "Roboto" !important;
-  }
+section.order-card > div > div.highlights  > p:hover {
+  color: blue;
 }
